sasql/tests/compile_fail/sql_injection.rs
fn main() {
    let _ = sasql::query!("SELECT 1; DROP TABLE users");
}
